--- a/index.ipynb
+++ b/index.ipynb
@@ -193,9 +193,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Suzie',\n",
+       "  'x': 1,\n",
+       "  'y': 11,\n",
+       "  'purchases': 70,\n",
+       "  'distance': 4.242640687119285},\n",
+       " {'name': 'Fred', 'x': 5, 'y': 8, 'purchases': 60, 'distance': 1.0},\n",
+       " {'name': 'Edgar',\n",
+       "  'x': 6,\n",
+       "  'y': 13,\n",
+       "  'purchases': 20,\n",
+       "  'distance': 5.385164807134504},\n",
+       " {'name': 'Steven',\n",
+       "  'x': 3,\n",
+       "  'y': 6,\n",
+       "  'purchases': 32,\n",
+       "  'distance': 2.23606797749979},\n",
+       " {'name': 'Natalie',\n",
+       "  'x': 5,\n",
+       "  'y': 4,\n",
+       "  'purchases': 45,\n",
+       "  'distance': 4.123105625617661}]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -210,8 +241,7 @@
     "\n",
     "def distance_all(selected_individual, neighbors):\n",
     "    remaining_neighbors = filter(lambda neighbor: neighbor != selected_individual, neighbors)\n",
-    "    return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), remaining_neighbors))\n",
-    "distance_all(bob, neighbo)"
+    "    return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), remaining_neighbors))\n"
    ]
   },
   {
