--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
     "def distance(selected_individual, neighbor):\n",
     "   distance_squared = (neighbor['x'] - selected_individual['x'])**2 + (neighbor['y'] - selected_individual['y'])**2\n",
     "   return math.sqrt(distance_squared)\n",
-    "\n",
+    "distance(bob, suzie)\n",
     "\n",
     "def distance_between_neighbors(selected_individual, neighbor):\n",
     "    neighbor_with_distance = neighbor.copy()\n",
